[package]
name = "server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
chord-rs = { path = "../libs/chord/chord-rs", features = ["capnp"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
log = "0.4.17"
simplelog = "0.12.1"
