[package]
name = "tamto-capnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.67"
capnp = "0.16.1"
capnp-rpc = "0.16.1"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "net"] }
chord-rs = { version = "0.1.0", path = "../chord", features = ["async"] }
log = "0.4.17"
tokio-util = { version = "0.7.7", features = ["compat"] }
futures = "0.3.28"
thiserror = "1.0.40"
error-stack = "0.3.1"

[build-dependencies]
capnpc = "0.16.2"
