[package]
name = "chord-capnp"
description = "Cap'n'proto implementation for chord-rs crate"
version = "0.1.0"
edition = "2021"

license = "MIT"

[dependencies]
async-trait = "0.1.67"
capnp = "0.16.1"
capnp-rpc = "0.16.1"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "net"] }
chord-rs-core = { version = "0.1.0", path = "../chord-core" }
log = "0.4.17"
tokio-util = { version = "0.7.7", features = ["compat"] }
futures = "0.3.28"
thiserror = "1.0.40"
error-stack = "0.3.1"

[build-dependencies]
capnpc = "0.16.2"
