[package]
name = "chord-rs-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
seahash = "4.1.0"
mockall = "0.11.3"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "sync", "macros", "time"] }

log = "0.4.17"
async-trait = "0.1.67"
async-recursion = "1.0.4"
error-stack = "0.3.1"
thiserror = "1.0.40"

[dev-dependencies]
lazy_static = "1.4.0"
