[package]
name = "chord-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahash = "4.1.0"
mockall = "0.11.3"
tokio = { version = "1.26.0", optional = true }

log = "0.4.17"
async-trait = "0.1.67"
async-recursion = "1.0.4"

[dev-dependencies]
lazy_static = "1.4.0"


[features]
default = ["async"]
async = ["dep:tokio", "tokio?/rt-multi-thread", "tokio?/sync", "tokio?/macros", "tokio?/time"]
