[package]
name = "chord-grpc"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
async-trait = "0.1.67"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
chord-rs-core = { version = "0.1.0", path = "../chord-core" }
prost = "0.11.6"
tonic = "0.8"
log = "0.4.17"
error-stack = "0.3.1"

[build-dependencies]
tonic-build = "0.8"
